# mimo-monitor

./: .gitignore  PLAN.md  README.md  main.py  pyproject.toml  test_client.py
.claude/: settings.local.json
desktop/: README.md  build.bat  tray.py  tray_windows.py
firmware/: README.md
firmware/esp32_ble/: platformio.ini
firmware/esp32_ble/src/: main.cpp
firmware/esp32_udp/: main.cpp  platformio.ini
mimo_monitor/: api.py  codex_monitor.py  detectors.py  models.py  protocol.py  watcher.py
mimo_monitor/hooks/: README.md  install.sh  mimo  mimo-hook.sh  mimo_hook.c  reporter.py
mimo_monitor/hooks/claude_code/: handler.sh  setup.sh  tui_monitor.sh  tui_monitor_v2.sh  tui_wrapper.sh
mimo_monitor/hooks/codex/: __init__.py  setup.sh  wrapper.sh
mimo_monitor/hooks/opencode/: __init__.py  package.json  plugin.ts  setup.sh  wrapper.sh
mimo_monitor/plugins/: claude_code.sh  codex.sh  codex_remote.sh  install.sh  opencode.ts
mimo_monitor/static/: dashboard.html
mimo_monitor/transmitters/: __init__.py  ble.py  udp.py
